# datalog

./: Cargo.toml  LICENSE.txt  README.md  grammar.txt
src/: lib.rs  parser.rs  predicates.rs  writer.rs
